<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:padding="@dimen/cardview_margin_4">

	<TextView
		android:id="@+id/post_title"
		style="@style/TextAppearance.AppCompat.Medium"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignStart="@+id/rateText"
		android:layout_alignLeft="@+id/rateText"
		android:layout_alignTop="@+id/rateText"
		android:layout_marginStart="97dp"
		android:layout_marginLeft="97dp"
		android:layout_marginTop="0dp"
		android:ellipsize="end"
		android:maxLines="1"
		android:textColor="#000"
		android:textSize="14sp"

		tools:text="@string/hint_title" />

	<TextView
		android:id="@+id/rateText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="5dp"
		android:text="@string/rs"
		android:textColor="#000"
		android:textSize="14sp"
		 />

	<TextView
		android:id="@+id/post_body"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"

		android:layout_marginTop="25dp"
		android:textColor="#000"

		tools:text="@string/hint_body" />



</RelativeLayout>