<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".MainActivity">




    <ScrollView

        android:layout_marginTop="60dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
    <RelativeLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@id/heading"
            android:text="@string/forgot_password_msg"
            android:textColor="#000"
            android:textSize="14dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/msg">
        <EditText

            android:id="@+id/emailreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#000" />
        <!-- Login Button -->
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_below="@id/t1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/buttonbg"
            android:text="@string/btn_reset_password"
            android:textColor="#EEEAEA" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_reset_password"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="#000" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
             />
    </RelativeLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>