<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".LoginOperator">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#ffffff"
        android:layout_alignParentStart="true"
        android:background="@drawable/toolbg"
        tools:ignore="MissingConstraints"
        android:layout_alignParentLeft="true" >

    </android.support.v7.widget.Toolbar>

    <ScrollView

        android:layout_marginTop="60dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

    <RelativeLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/login_here"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="italic"
            android:textSize="30sp"
            tools:targetApi="jelly_bean" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:textAllCaps="false"
            android:textColor="#FA0F0D0D"
            android:textColorHighlight="#F5F4F4"
            android:textColorHint="#B20A0A0A"
            tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1">
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:textAllCaps="false"
            android:textColor="#FA0F0D0D"
            android:textColorHighlight="#F5F4F4"
            android:textColorHint="#B20A0A0A"
            tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/loginB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonbg"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#EEEBEB" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_below="@id/loginB"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="#000" />
        <!-- Link to Sign up Screen -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#000"
            android:layout_below="@id/btn_reset_password"
            android:textSize="15sp" />
    </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginEnd="411dp"
        android:layout_marginRight="411dp"
        android:layout_marginBottom="731dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>