<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/img"
	tools:context=".MainActivity">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:background="@drawable/toolbg"
		app:titleTextColor="#ffffff"
		tools:ignore="MissingConstraints"
		android:layout_alignParentLeft="true" />

	<ScrollView

		android:layout_marginTop="60dp"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		tools:ignore="MissingConstraints">


		<RelativeLayout
			android:id="@+id/center"
			android:layout_width="match_parent"
			android:layout_height="500dp"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/rounded"
			android:foregroundGravity="center"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.393"
			tools:ignore="MissingConstraints">


			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="40dp"
				android:text="@string/who_you_are"
				android:textAlignment="center"
				android:textColor="#000"
				android:textSize="30sp" />


			<Button
				android:id="@+id/traveller"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="150dp"
				android:textSize="25sp"
				android:background="@drawable/buttonbg"
				android:text="@string/i_am_a_traveller"
				android:textAlignment="center"
				android:textColor="#F7F2F2" />

			<Button
				android:id="@+id/operatorr"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/traveller"
				android:layout_marginTop="78dp"
				android:background="@drawable/buttonbg"
				android:textSize="25sp"
				android:text="@string/i_am_an_operator"
				android:textAlignment="center"
				android:textColor="#ECEBEB" />
		</RelativeLayout>

	</ScrollView>

</android.support.constraint.ConstraintLayout>